cyborg things and refinery things

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -973,6 +973,8 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	decision_tec_cybernetic_augmentation_require_cybernetic_building_biohive:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_regular_cybernetic_cortex$§! or §Y£building£ $building_tec_regular_cybernetic_forge$§! ."
 	decision_tec_cybernetic_augmentation_tooltip:0 "Starts the §Y£stability£ $situation_tec_ascension_genetic_recombination$§! situation, allowing the upgrade of cybernetic augmentation categories, improving the performance of traits in a batch."
 
+	mod_tec_cyborg_mainframe_value_mult:0 "Mainframe Overclock"
+	mod_tec_cyborg_mainframe_upkeep_mult:0 "Mainframe Overcharge"
 	mod_tec_cyborg_cortex_value_mult:0 "Cortex Overclock"
 	mod_tec_cyborg_cortex_upkeep_mult:0 "Cortex Overcharge"
 	mod_tec_cyborg_internal_value_mult:0 "Internal Overclock"
