--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1319,18 +1319,39 @@
 	trait_tec_cyborg_mainframe_mech_desc:0 "§LBig, ostentatious and heavy external mobilized and modular platforms are integrated with the body and mind of this species, greatly enhancing the user's capabilities and strength while also allowing a really effective execution of any brute-force task, whether if its industrial work or military deployment.§!"
 	trait_tec_cyborg_mainframe_mech_effect:0 "§YTODO ASCENSION§!"
 
+	trait_tec_cyborg_mainframe_adaptive:0 "Adaptive Mainframe"
+	trait_tec_cyborg_mainframe_adaptive_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_mainframe_adaptive_effect:0 "§YTODO ASCENSION§!"
+
 	# Tier 2
 	trait_tec_cyborg_mainframe_advanced:0 "Superior Mainframe"
 	trait_tec_cyborg_mainframe_advanced_desc:0 "§LAn advanced robotic construct completely replaces the skeleton of this species, and some organs at a certain degree, creating really durable and resilient individuals, capable of doing tasks formerly unprecedented for a organic being.§!"
 	trait_tec_cyborg_mainframe_advanced_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_mainframe_adaptive:0 "Adaptive Warframe"
-	trait_tec_cyborg_mainframe_adaptive_desc:0 "§LTODO ASCENSION.§!"
-	trait_tec_cyborg_mainframe_adaptive_effect:0 "§YTODO ASCENSION§!"
-
-	trait_tec_cyborg_mainframe_combat:0 "Adaptive Warframe"
+	trait_tec_cyborg_mainframe_combat:0 "Superior Warframe"
 	trait_tec_cyborg_mainframe_combat_desc:0 "§LTODO ASCENSION.§!"
 	trait_tec_cyborg_mainframe_combat_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_mainframe_super_adaptive:0 "Adaptive Mainframe"
+	trait_tec_cyborg_mainframe_super_adaptive_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_mainframe_super_adaptive_effect:0 "§YTODO ASCENSION§!"
+
+	# Automod
+	trait_tec_cyborg_mainframe_auto_menial:0 "Module - Extraction Devices"
+	trait_tec_cyborg_mainframe_auto_menial_desc:0 "§LThis species warframe has been adapted to host several tools for resource extraction.§!"
+	trait_tec_cyborg_mainframe_auto_menial_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_mainframe_auto_industrial:0 "Module - Industrial Equipment"
+	trait_tec_cyborg_mainframe_auto_industrial_desc:0 "§LA reinforced set of tools for industrial production of resources and different amenities is implanted in the cybernetic frame of this species.§!"
+	trait_tec_cyborg_mainframe_auto_industrial_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_mainframe_auto_intellectual:0 "Module - Intellectual Appliances"
+	trait_tec_cyborg_mainframe_auto_intellectual_desc:0 "§LWith a dyrect neural connection to higher-grade implants, these appliances ensure a safe and streamlined development of technological and social duties.§!"
+	trait_tec_cyborg_mainframe_auto_intellectual_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_mainframe_auto_military:0 "Module - Mili-Grade Gear"
+	trait_tec_cyborg_mainframe_auto_military_desc:0 "§LState-of-the-art weapons and controllers are mounted in the frame of these cyborgs, greatly increasing the output of military and naval related operations.§!"
+	trait_tec_cyborg_mainframe_auto_military_effect:0 "§YTODO ASCENSION§!"
  # /
  # --------------- Cortex Implants
 	# Tier 1
@@ -1379,19 +1400,19 @@
 	# Tier 1
 	trait_tec_cyborg_internal_organs:0 "Artificial Organs"
 	trait_tec_cyborg_internal_organs_desc:0 "§LExtra cybernetic organs reinforce the organism of this species, serving as direct backup, redundance, contingency or mitigator in case of biological failure or overall day-to-day experience.§!"
-	trait_tec_cyborg_internal_organs_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_internal_organs_effect:0 "§EInternal Modifiers:§!\n  $tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk_hybrid$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_internal_tt$\nEfficiency and Upkeep of §YInternal§! modifiers increased by §Y$@tec_cyborg_main_t1_selfboost_tt$%§!"
 
 	trait_tec_cyborg_internal_septic:0 "Septic Implants"
 	trait_tec_cyborg_internal_septic_desc:0 "§LComplementary cybernetic devices, allocated in multiple parts of the body, constantly filter and distribute enhancing substances in the bloodstream, allows a longer lifespan, faster bodily adaptation to foreign environments and near total immunity to diseases.§!"
-	trait_tec_cyborg_internal_septic_effect:0 "§YTODO ASCENSION§!"
-
-	trait_tec_cyborg_internal_integumentary:0 "Integumentary Augmentation"
-	trait_tec_cyborg_internal_integumentary_desc:0 "§LNano-fibers and cybernetic webs traverse the entire bodily surface, serving as a reinforcement of the integumentary system of this species and interface with other cybernetic traits.§!"
-	trait_tec_cyborg_internal_integumentary_effect:0 "§EInternal Modifiers:§!\n  $tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk_high$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_tt$\nEfficiency and Upkeep of §YALL§! Cybernetic modifiers increased by §G+50%§!"
+	trait_tec_cyborg_internal_septic_effect:0 "$MOD_POP_ENVIRONMENT_TOLERANCE$: §G+$@trait_tec_cyborg_internal_septic_hab_rate_tt$%§!\n$MOD_LEADER_LIFESPAN_ADD$: §G+$@trait_tec_cyborg_internal_septic_lifespan_rate$§!\n\n§EInternal Modifiers:§!\n  $tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_internal_tt$\nEfficiency of §YInternal§! modifiers increased by §Y$@tec_cyborg_main_t1_selfboost_tt$%§!"
 
 	trait_tec_cyborg_internal_retrofit:0 "Internal Retrofitters"
 	trait_tec_cyborg_internal_retrofit_desc:0 "§LSmall deposits of useful repair nanodrones are distributed around the body, allowing a perfect maintenance and repair tasks of any enhancement, implant or the organic body itself.§!"
-	trait_tec_cyborg_internal_retrofit_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_internal_retrofit_effect:0 "§EInternal Modifiers:§!\n  Pop Energy Upkeep: §R+$@tec_cyborg_module_t1_energy_upk_hybrid$§!\n  $tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk_hybrid$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_internal_tt$\nEfficiency and Upkeep of §YInternal§! modifiers increased by §Y$@tec_cyborg_main_t1_selfboost_tt$%§!"
+
+	trait_tec_cyborg_internal_integumentary:0 "Integumentary Augmentation"
+	trait_tec_cyborg_internal_integumentary_desc:0 "§LNano-fibers and cybernetic webs traverse the entire bodily surface, serving as a reinforcement of the integumentary system of this species and interface with other cybernetic traits.§!"
+	trait_tec_cyborg_internal_integumentary_effect:0 "§EInternal Modifiers:§!\n  Pop Energy Upkeep: §R+$@tec_cyborg_module_t1_energy_upk_hybrid$§!\n  $tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk_high_hybrid$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_tt$\nEfficiency and Upkeep of §YALL§! Cybernetic modifiers increased by §G+$trait_tec_cyborg_internal_integumentary_boost_rate_tt$%§!"
 
 	trait_tec_cyborg_internal_adrenaline:0 "Adrenal Boosters"
 	trait_tec_cyborg_internal_adrenaline_desc:0 "§LArtificial secretion glands pump chemicals into this cybernetic species, greatly enhancing the performance on demand.§!"
