more refinery things

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -3154,16 +3154,18 @@ l_english:
 	building_crystal_plant_3_desc:0 "Advanced production complexes where the purest synthetic crystals are mass-produced by specialists using specially designed nanobots and vast amounts of raw minerals."
  
 	# Boosters
-		building_tec_strategic_miner: "Strategic Exploitation Facility"
-		building_tec_strategic_miner_desc: "This advanced complex employs specialized technologies to maximize the extraction and refinement of strategic resources. Cutting-edge equipment efficiently processes crystals, motes, and gases, transforming raw materials into valuable empire assets."
+		building_tec_strategic_miner:0 "Strategic Exploitation Facility"
+		building_tec_strategic_miner_plural:0 "Strategic Exploitation Facilities"
+		building_tec_strategic_miner_desc:0 "This advanced complex employs specialized technologies to maximize the extraction and refinement of strategic resources. Cutting-edge equipment efficiently processes crystals, motes, and gases, transforming raw materials into valuable empire assets."
 
-		building_tec_biohive_strategic_miner: "Strategic Extirpation Organelle"
-		building_tec_biohive_strategic_miner_desc: "This vast, pulsating organelle extends tendrils deep into the planet's crust, sensing and absorbing strategic resources. Specialized membrane structures efficiently filter crystals, motes, and gases, metabolizing them into forms the hive can readily assimilate and utilize."
+		building_tec_biohive_strategic_miner:0 "Strategic Extirpation Organelle"
+		building_tec_biohive_strategic_miner_plural:0 "Strategic Extirpation Organelles"
+		building_tec_biohive_strategic_miner_desc:0 "This vast, pulsating organelle extends tendrils deep into the planet's crust, sensing and absorbing strategic resources. Specialized membrane structures efficiently filter crystals, motes, and gases, metabolizing them into forms the hive can readily assimilate and utilize."
 
 		building_tec_sr_miner_motes_effect:0 "\n§EFeature:§! §H£volatile_motes£ Recycled Motility§!\n- Removes the §Y£job_miner£ $job_miner$§! production of $tec_loc_volatile_motes$ from $tec_loc_deposits$.\n- Provides §G+1§! £job_chemist£ Chemist job and §YIncreased Chemist Output§! per $tec_loc_volatile_motes$ deposit.\n\n"
-		building_tec_sr_miner_gases_effect:0 "\n§EFeature:§! §H£exotic_gases£ Gasified Overload§!\n- Removes the §Y£job_miner£ $job_miner$§! production of $tec_loc_exotic_gases$ from $tec_loc_deposits$.\n- Provides §G+1§! £job_gas_refiner£ Refiner job and §YIncreased Refiner Output§! per $tec_loc_exotic_gases$ deposit.\n\n"
-		building_tec_sr_miner_crystals_effect:0 "\n§EFeature:§! §H£rare_crystals£ Cristalized Reproduction§!\n- Removes the §Y£job_miner£ $job_miner$§! production of $tec_loc_rare_crystals$ from $tec_loc_deposits$.\n- Provides §G+1§! £job_translucer£ Translucer job and §YIncreased Translucer Output§! per $tec_loc_exotic_gases$ deposit.\n\n"
-		building_tec_sr_miner_all_effect:0 "\n§EFeature:§! §H£tec_deposit£ Strategized Extraction§!\n- Removes the §Y£job_miner£ $job_miner$§! production of $tec_loc_strategic_resources$ from $tec_loc_deposits$.\n- Provides §G+2§! £trigger_tec_rare_resources£ Strategic Resource Miners and §YBoost§! their Output per deposit of the respective type.\n\n"
+		building_tec_sr_miner_gases_effect:0 "\n§EFeature:§! §H£exotic_gases£ Gasified Overload§!\n- Removes the §Y£job_miner£ [GetMiner]§! production of $tec_loc_exotic_gases$ from $tec_loc_deposits$.\n- Provides §G+1§! £job_gas_refiner£ Refiner job and §YIncreased Refiner Output§! per $tec_loc_exotic_gases$ deposit.\n\n"
+		building_tec_sr_miner_crystals_effect:0 "\n§EFeature:§! §H£rare_crystals£ Cristalized Reproduction§!\n- Removes the §Y£job_miner£ [GetMiner]§! production of $tec_loc_rare_crystals$ from $tec_loc_deposits$.\n- Provides §G+1§! £job_translucer£ Translucer job and §YIncreased Translucer Output§! per $tec_loc_exotic_gases$ deposit.\n\n"
+		building_tec_sr_miner_all_effect:0 "\n§EFeature:§! §H£tec_deposit£ Strategized Extraction§!\n- Removes the §Y£job_miner£ [GetMiner]§! production of $tec_loc_strategic_resources$ from $tec_loc_deposits$.\n- Provides §G+2§! £trigger_tec_rare_resources£ Strategic Resource Miners and §YBoost§! their Output per deposit of the respective type.\n\n"
 
 		tec_only_one_strategic_booster_group_on_planet_miner:0 "$TRIGGER_FAIL$§ROnly one £trigger_tec_rare_resources£ §YRare Resource Booster§! group per planet. Any other Rare Resource Booster must be dismantled before this one can be built; Boosters of different resources are NOT exclusive with eachother.§!"
 		tec_only_one_strategic_booster_group_on_planet_artificial:0 "$TRIGGER_FAIL$§ROnly one £trigger_tec_rare_resources£ §YRare Resource Booster§! group per planet. Dismantle the other Booster must be dismantled before this one can be built; Boosters of different resources are NOT exclusive with eachother.§!"
