--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -208,9 +208,9 @@
 
 # DEPOSITS replaces
 # ------------------------------------------------------------
-	mod_building_crystal_mines_max:0 "Allows ['building:building_tec_strategic_miner', £building£ $building_tec_strategic_miner$]\nWill remove £job_miner£ [GetMiner] $tec_loc_rare_crystals$ bonuses if built\nMax £rare_crystals£ Rare Crystal Mining Jobs on Building"
-	mod_building_mote_harvesters_max:0 "Allows  ['building:building_tec_strategic_miner', £building£ $building_tec_strategic_miner$]\nWill remove £job_miner£ [GetMiner] $tec_loc_volatile_motes$ bonuses if built\nMax £volatile_motes£ Volatile Mote Trapping Jobs on Building"
-	mod_building_gas_extractors_max:0 "Allows ['building:building_tec_strategic_miner', £building£ $building_tec_strategic_miner$]\nWill remove £job_miner£ [GetMiner] $tec_loc_exotic_gases$ bonuses if built\nMax £exotic_gases£ Exotic Gas Extraction Jobs on Building"
+	mod_building_crystal_mines_max:0 "Allows ['building:building_crystal_mines', £building£ $building_crystal_mines$]\nAllows ['building:building_tec_strategic_miner', £building£ $building_tec_strategic_miner$]\nWill remove £job_miner£ [GetMiner] $tec_loc_rare_crystals$ bonuses if built\nMax £rare_crystals£ Rare Crystal Mining Jobs on Building"
+	mod_building_mote_harvesters_max:0 "Allows ['building:building_mote_harvesters', £building£ $building_mote_harvesters$]\nAllows ['building:building_tec_strategic_miner', £building£ $building_tec_strategic_miner$]\nWill remove £job_miner£ [GetMiner] $tec_loc_volatile_motes$ bonuses if built\nMax £volatile_motes£ Volatile Mote Trapping Jobs on Building"
+	mod_building_gas_extractors_max:0 "Allows ['building:building_gas_extractors', £building£ $building_gas_extractors$]\nAllows ['building:building_tec_strategic_miner', £building£ $building_tec_strategic_miner$]\nWill remove £job_miner£ [GetMiner] $tec_loc_exotic_gases$ bonuses if built\nMax £exotic_gases£ Exotic Gas Extraction Jobs on Building"
 	mod_building_betharian_power_plant_max:0 "Allows ['building:building_betharian_power_plant', £building£ $building_betharian_power_plant$]\nMax £energy£ Technician Jobs (x4)"
 
 # BUILDINGS replaces - TODO REMOVE
