feat: some standardization of building upkeeps from assembly, some synergy between bioservant and natural design, livestock trait for bioservants

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -3132,3 +3132,15 @@
 # ------------------------------------------------------------
 
 # /
+
+civic_tec_natural_design_mechanists: "$civic_natural_design$"
+civic_tec_natural_design_bioservants: "$civic_natural_design$"
+
+civic_tooltip_natural_design_effects: "$tec_loc_c_unlocks_building$ ['concept_transcendental_retreat', §H£building£ $concept_transcendental_retreat$§!]\n- Provides a ['concept_tec_specialist_job_healthcare_plural_icon'] Job and increases planetary §Y$tec_loc_unity$§! and §Y$tec_loc_pop_growth$§!\n\n$tec_loc_c_initial_pick$ §HOrigin Enhancements§!\n- With ['civic:origin_tec_bioservant'] §YOrigin§! this civic inherits its species points and picks at game start\n- Origin species points and picks §Rdo not§! apply at game start so this compensates for that"
+
+civic_tooltip_natural_design_negative_effects: "- Lowers approval of empires that have started §YAscension Paths§!"
+
+civic_tec_hive_natural_design_mechanists: "$civic_hive_natural_design$"
+civic_tec_hive_natural_design_bioservants: "$civic_hive_natural_design$"
+civic_hive_tooltip_natural_design_effects: "$tec_loc_c_unlocks_building$ ['concept_hive_transcendental_retreat', §H£building£ $concept_hive_transcendental_retreat$§!]\n- Provides a ['concept_tec_specialist_job_spawning_drone_plural_icon'] Job and increases planetary §Y$tec_loc_unity$§! and §Y$tec_loc_pop_growth$§!\n\n$tec_loc_c_initial_pick$ §HOrigin Enhancements§!\n- With ['civic:origin_tec_bioservant'] §YOrigin§! this civic inherits its species points and picks at game start\n- Origin species points and picks §Rdo not§! apply at game start so this compensates for that"
+civic_hive_tooltip_natural_design_negative_effects: "$civic_tooltip_natural_design_negative_effects$"
