--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -1001,14 +1001,14 @@
 	concept_tec_specialist_job_roboticist_icon: "£job_roboticist£ $job_roboticist$"
 	concept_tec_specialist_job_roboticist_plural: "$job_roboticist_plural$"
 	concept_tec_specialist_job_roboticist_plural_icon: "£job_roboticist£ $job_roboticist_plural$"
-	concept_tec_specialist_job_roboticist_desc: "§L$job_roboticist_desc$§!\n\n$job_roboticist_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_pop_assemblers_alias_icon']\n\n$tec_loc_amenities$: §G+5§!\n$tec_loc_robot_assembly$: §G+2§!\n$tec_loc_c_upkeep$: §Y£alloys£ 2§!"
+	concept_tec_specialist_job_roboticist_desc: "§L$job_roboticist_desc$§!\n\n$job_roboticist_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_pop_assemblers_alias_icon']\n\n$tec_loc_amenities$: §G+5§!\n$tec_loc_robot_assembly$: §G+2§!\n$tec_loc_c_upkeep$: §Y£alloys£ $@tec_loc_roboticist_upkeep$§!"
 
 	concept_tec_specialist_job_tec_cloner: "$job_tec_cloner$"
 	concept_tec_specialist_job_tec_cloner_alias: "$job_tec_cloner$"
 	concept_tec_specialist_job_tec_cloner_icon: "£job_tec_cloner£ $job_tec_cloner$"
 	concept_tec_specialist_job_tec_cloner_plural: "$job_tec_cloner_plural$"
 	concept_tec_specialist_job_tec_cloner_plural_icon: "£job_tec_cloner£ $job_tec_cloner_plural$"
-	concept_tec_specialist_job_tec_cloner_desc: "§L$job_tec_cloner_desc$§!\n\n$job_tec_cloner_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_pop_assemblers_alias_icon']\n\n$tec_loc_organic_assembly$: §G+2§!\n$tec_loc_c_upkeep$ (assembled pop is Organic): §Y£food£ 8§! §Y£consumer_goods£ 2§!\n$tec_loc_c_upkeep$ (assembled pop is Lithoid): §Y£minerals£ 8§! §Y£consumer_goods£ 2§!"
+	concept_tec_specialist_job_tec_cloner_desc: "§L$job_tec_cloner_desc$§!\n\n$job_tec_cloner_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_pop_assemblers_alias_icon']\n\n$tec_loc_organic_assembly$: §G+2§!\n$tec_loc_c_upkeep$ (assembled pop is Organic): §Y£food£ $@tec_loc_cloner_upkeep$§! §Y£consumer_goods£ 2§!\n$tec_loc_c_upkeep$ (assembled pop is Lithoid): §Y£minerals£ $@tec_loc_cloner_upkeep$§! §Y£consumer_goods£ 2§!"
 
 
 	concept_tec_specialist_job_bureaucrat: "$job_bureaucrat$"
@@ -1131,14 +1131,14 @@
 	concept_tec_specialist_job_spawning_drone_icon: "£job_spawning_drone£ $job_spawning_drone$"
 	concept_tec_specialist_job_spawning_drone_plural: "$job_spawning_drone_plural$"
 	concept_tec_specialist_job_spawning_drone_plural_icon: "£job_spawning_drone£ $job_spawning_drone_plural$"
-	concept_tec_specialist_job_spawning_drone_desc: "§L$job_spawning_drone_desc$§!\n\n$job_spawning_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_pop_assemblers_alias_icon']\n\n$tec_loc_organic_assembly$: §G+2§!\n$tec_loc_c_upkeep$ (Organic): §Y£food£ 5§!\n$tec_loc_c_upkeep$ (Lithoid): §Y£minerals£ 5§!"
+	concept_tec_specialist_job_spawning_drone_desc: "§L$job_spawning_drone_desc$§!\n\n$job_spawning_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_pop_assemblers_alias_icon']\n\n$tec_loc_organic_assembly$: §G+2§!\n$tec_loc_c_upkeep$ (Organic): §Y£food£ $@tec_loc_spawner_drone_upkeep$§!\n$tec_loc_c_upkeep$ (Lithoid): §Y£minerals£ $@tec_loc_spawner_drone_upkeep$§!"
 
 	concept_tec_specialist_job_replicator: "$job_replicator$"
 	concept_tec_specialist_job_replicator_alias: "$job_replicator$"
 	concept_tec_specialist_job_replicator_icon: "£job_replicator£ $job_replicator$"
 	concept_tec_specialist_job_replicator_plural: "$job_replicator_plural$"
 	concept_tec_specialist_job_replicator_plural_icon: "£job_replicator£ $job_replicator_plural$"
-	concept_tec_specialist_job_replicator_desc: "§L$job_replicator_desc$§!\n\n$job_replicator_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_pop_assemblers_alias_icon']\n\n$tec_loc_robot_assembly$: §G+1§!\n$tec_loc_c_upkeep$: §Y£alloys£ 1§!"
+	concept_tec_specialist_job_replicator_desc: "§L$job_replicator_desc$§!\n\n$job_replicator_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_pop_assemblers_alias_icon']\n\n$tec_loc_robot_assembly$: §G+1§!\n$tec_loc_c_upkeep$: §Y£alloys£ $@tec_loc_replicator_upkeep$§!"
 
 	concept_tec_specialist_job_evaluator: "$job_evaluator$"
 	concept_tec_specialist_job_evaluator_alias: "$job_evaluator$"
