--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1971,6 +1971,10 @@
 	trait_tec_bioservant_domestic_servant_desc: "Genetically optimized for domestic tasks, with instincts and abilities tailored for service in diverse environments."
 	TRAIT_TEC_BIOSERVANT_DOMESTIC_SERVANT_EFFECT:1 "Can be employed in £job_servant£ §Y$job_servant$§! Jobs if under §Y$bioservant_servitude_name$§!"
 
+	trait_tec_bioservant_livestock: "Bio-Factory Physiology"
+	trait_tec_bioservant_livestock_desc: "Genetically optimized cellular structures for rapid biomass production and superior nutritional yield."
+	TRAIT_TEC_BIOSERVANT_LIVESTOCK_EFFECT: "Can be employed in £job_livestock£ §Y$job_livestock$§! Jobs if under §Y$bioservant_servitude_name$§!"
+
 # LEADER TRAITS
 # ------------------------------------------------------------
 # Leader traits that are not tied to a species trait
