fix: fixed livestock job for bioservants, fixed weights for worker jobs with crafted species

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -5,6 +5,8 @@
 	TRIGGER_NOT_HAS_ORIGIN:2 "Does NOT have ['civic:$ORIGIN$'] Origin"
 	TRIGGER_HAS_CIVIC:3 "Has ['civic:$CIVIC$'] Civic"
 	TRIGGER_NOT_HAS_CIVIC:3 "Does NOT have ['civic:$CIVIC$'] Civic"
+
+	IS_SAPIENT:0 "This Species is Sapient"
 # MISC replaces
 # ------------------------------------------------------------
 	CORPORATE_COUNTRY_MODIFIER:0 "£empire£§YCorporate Empire§! §EEffects§!"
